--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
       "php": ">=5.4.0",
       "illuminate/support": "~5.0|~5.1|~5.2",
       "league/flysystem": "~1.0",
-      "guzzle/guzzle": "3.7.1"
+      "guzzle/guzzle": "~3.8.1"
     },
     "autoload": {
       "psr-4": {
